# upgraded-fiesta-Codex

./: .env.production.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  app.js  docker-compose.ops-dry-run.yml  docker-compose.yml  index.html  manifest.webmanifest  service-worker.js  styles.css
.beads/: config.yaml  metadata.json
.codex/: config.toml  maintenance.sh  run-trigger.txt  setup.sh
config/: agent-objectives.audit.json  heavy-metal.json  heavy-metal.toml  ops-activation-thresholds.example.json  ops-command-manifest.example.json  ops-route-matrix.example.json  repo-trusted-ops.fullstack.json  v1-released-fullworking-system.object.json  vorging.service.data
datasets/: debug-export-20260708.dataset.json  depo-server.config.json  device-exec.config.json  localhost-export.config.json  localhost-export.object.json  network-capabilities.config.json  operable-repo.config.json  operable-repo.object.json  remote-control.config.json  repository-synthesis.dataset.json  safe-write-edit-ops.policy.json  v1-released-fullworking-system.dataset.json  workflow-dispatch.fullstacked.dataset.json
deploy/: fullstack-compose.yml  gateway_service.py
docs/: GENERATED_HEAVY_METAL_WORKSPACE_DEPLOY.md  SIGNAL_CLI_GATEWAY_BOOTSTRAP.md  agent-audit-objective-map.md  architecture.md  ashell-codex-chat.md  ashell-mobile-master-grade.md  audit-valid-debug-streampipe.md  codex-app-github-production-setup.md  debug-export-20260708.md  file-manifest.md  full-debug-runbook.md  fullstack-up.md  iphone-local-dev-setup.md  live-operations-access-policy.md  (+15 more)
(+232 files in other folders)
