[workspace]
resolver = "2"
members = [
  "crates/hm-core",
  "crates/hm-gateway",
  "crates/hm-agent",
  "crates/hm-memory",
  "crates/hm-channels/hm-channel-telegram",
  "crates/hm-channels/hm-channel-discord",
  "crates/hm-channels/hm-channel-slack",
  "crates/hm-channels/hm-channel-whatsapp",
  "crates/hm-tools/hm-tool-exec",
  "crates/hm-tools/hm-tool-browser",
  "crates/hm-tools/hm-tool-web",
  "crates/hm-tools/hm-tool-media",
  "crates/hm-plugins",
  "crates/hm-sdk",
  "crates/hm-sessions",
  "crates/hm-vector",
  "crates/hm-cron",
  "crates/hm-auth",
  "crates/hm-cli"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
